# ZTippy

./: README.md  README_UPDATED.md  config.js  messages.js  migrate.js  package.json  price.js  tips.js  wallet.js
native/: Cargo.toml  README.md  index.d.ts  index.js  index.linux-x64-gnu.node  package.json
native/src/: address.rs  decrypt.rs  error.rs  fees.rs  keys.rs  lib.rs  memo.rs  network.rs  seed.rs
scripts/: migrate.js
src/: amount.js  bot.js  config.js  db.js  intents.js  logger.js  messages.js  rateLimiter.js  scanner-standalone.js  scanner.js  tips.js  withdraw.js
