[package]
name    = "zcash_tipbot_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "2.16", features = ["napi4", "async"] }
napi-derive = "2.16"
zcash_primitives     = "0.28"
zcash_protocol       = "0.9"
zcash_keys           = { version = "0.14", features = ["orchard"] }
zcash_address        = "0.12"
orchard              = "0.14"
bip0039 = { version = "0.14", features = ["all-languages"] }
zip32   = "0.2"
hex       = "0.4"
thiserror = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
